--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-top-nav></app-top-nav>
+<main class="flex w-screen h-screen flex-col overflow-hidden">
+  <app-top-nav></app-top-nav>
+  <main class="w-full h-full overflow-scroll p-4">
+    <router-outlet></router-outlet>
+  </main>
+</main>
