--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,7 @@
-<p>about-us works!</p>
+<div>
+  <h1>About us</h1>
+  <!-- history -->
+  <!-- products -->
+  <!-- machines -->
+  <!-- community -->
+</div>
