--- a/src/app/shared/components/top-nav/top-nav.component.html
+++ b/src/app/shared/components/top-nav/top-nav.component.html
@@ -14,20 +14,18 @@
       *ngIf="isPhone$ | async; else menuBtn"
       class="flex w-1/3 max-w-lg min-w-fit gap-2 justify-around"
     >
-      <div *ngFor="let item of menuItems">
-        <a
-          mat-button
-          [routerLink]="'/' + item.replace(' ', '-').toLowerCase()"
-          [routerLinkActive]="'font-bold bg-slate-200'"
-          >{{ item }}</a
-        >
-      </div>
+      <app-nav-item
+        *ngFor="let navItem of navItems"
+        [navItem]="navItem"
+      ></app-nav-item>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
 
 <ng-template #menuBtn>
   <button mat-icon-button>
-    <mat-icon> menu </mat-icon>
+    <mat-icon (click)="toggleSideNav()">
+      {{ sideNavOpen ? "close" : "menu" }}
+    </mat-icon>
   </button>
 </ng-template>
